<resources>
    <string name="app_name">Pizza Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="image_view_content_description">Pizza Image</string>
    <string name="empty_bag">There is no Items in your Bag now!</string>
    <string name="items_string"> Items</string>
    <string name="item_removed">Item Removed</string>
    <string name="shop_string">Shop</string>
    <string name="cart_string">Cart</string>
    <string name="history_string">History</string>
    <string name="profile_string">Profile</string>
    <string name="drag_string">Drag to your Location</string>
    <string name="ItemAddedtoCart_string">Item Added to Cart</string>
    <string name="wrong_mail_string">Wrong Mail</string>
    <string name="password_at_least_string">Password at least must be 8 Characters</string>
    <string name="this_phone_already_string">This Phone is already SignedUp</string>
    <string name="wrong_phone_number_string">Wrong Phone Number</string>
    <string name="name_must_be_string">Name must be at least 2 Characters</string>
    <string name="fix_issues_string">Fix Issues First Please!</string>
    <string name="fill_data_string">Fill valid Data First Please!</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="pizza">PIZZA</string>
    <string name="address">ADDRESS</string>
    <string name="phone">PHONE</string>
    <string name="bar_code">Bar Code</string>
    <string name="est">EST</string>
    <string name="confirm">Confirm</string>
    <string name="you_better_hurry_and_order_now">You better hurry and order now</string>
    <string name="login">LogIn</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="all">ALL</string>
    <string name="pasta">Pasta</string>
    <string name="rice">Rice</string>
    <string name="name">Name</string>
    <string name="minimum_rating">Minimum Rating:</string>
    <string name="e_mail">E-Mail</string>
    <string name="hello">HELLO</string>
    <string name="let_s_fun_with_pizza">Let’s fun with pizza!</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="we_are_sure_you_will_like_something">We are sure you will like something</string>
    <string name="settings">Settings</string>
    <string name="arabic">arabic</string>
    <string name="english">English</string>
    <string name="user">user</string>
    <string name="cant_check_out">Can\'t Checkout</string>
    <string name="please_login">Please login first</string>
    <string name="please_select_food">Please select food from shop menu first</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="confirm_phone_number">Confirm Phone Number</string>
    <string name="code">Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_phone_string">Verify phone number first please!</string>
</resources>
