<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/shopItem" android:title="@string/shop_string" android:icon="@drawable/ic_shopping_cart"/>
        <item android:id="@+id/cartItem" android:title="@string/cart_string" android:icon="@drawable/ic_bag"/>
        <item android:id="@+id/historyItem" android:title="@string/history_string" android:icon="@drawable/ic_hourglass"/>
        <item android:id="@+id/profileItem" android:title="@string/profile_string" android:icon="@drawable/user"/>
        <item android:id="@+id/favItem" android:title="@string/favourites" android:icon="@drawable/ic_baseline_favorite_24"/>
        <item android:id="@+id/settingsItem" android:title="@string/settings" android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
</menu>