<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/_30sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
    android:id="@+id/helloText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hello"
    android:textColor="@color/colorFourth"
    android:textSize="@dimen/_15sdp"
    android:layout_marginLeft="@dimen/_30sdp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/navigationDrawerHeaderUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textAllCaps="true"
        android:textColor="@color/colorFourth"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/helloText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_fun_with_pizza"
        android:textColor="@color/colorFourth"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@+id/helloText"
        app:layout_constraintLeft_toLeftOf="@+id/helloText"/>

</androidx.constraintlayout.widget.ConstraintLayout>