<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/colorSecondary"
tools:context=".ProfileActivity">

    <EditText
        android:visibility="gone"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/mail"
        android:gravity="center"
        android:hint="E-Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_15sdp" />
    <EditText
        android:visibility="gone"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        android:id="@+id/name"
        android:gravity="center"
        android:hint="Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="@dimen/_15sdp"/>
    <EditText
        android:visibility="gone"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:id="@+id/phone"
        android:gravity="center"
        android:hint="Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="@dimen/_15sdp" />
    <Button
        android:visibility="gone"
        android:id="@+id/updateBtn"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/edit_profile_string"
        android:onClick="editProfile"/>

    <Button
        android:visibility="gone"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:id="@+id/confirmPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/confirm_phone_number"
        android:onClick="confirmPhoneNumber"/>
    <Button
        android:visibility="gone"
        app:layout_goneMarginTop="@dimen/_20sdp"
        android:id="@+id/logoutBtn"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/logout"
        android:onClick="logout"/>

    <Button
        android:layout_marginTop="@dimen/_40sdp"
        android:id="@+id/loginBtn"
        android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signUpBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@color/colorFourth"
        android:backgroundTint="@color/colorPrimary"/>
    <Button
    android:layout_marginTop="@dimen/_40sdp"
    android:id="@+id/signUpBtn"
    android:paddingRight="@dimen/_10sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:padding="@dimen/_5sdp"
    app:layout_constraintLeft_toRightOf="@+id/loginBtn"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/_20sdp"
    android:text="@string/signup"
    android:onClick="signUp"
    android:textColor="@color/colorFourth"
    android:backgroundTint="@color/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>