<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:background="@color/colorSecondary"
    tools:context=".SignUpActivity">

    <TextView
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorFourth"
        android:backgroundTint="@color/colorPrimary"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/signbg"
        android:elevation="10dp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:text="Pizza Shop"/>

    <TextView
        android:id="@+id/headWarningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:textColor="@color/colorFourth"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_130sdp" />
    <EditText
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        android:id="@+id/mail"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:textColorHint="@color/colorTertiary"
        android:textColor="@color/colorFourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_15sdp" />
    <EditText
        app:layout_constraintTop_toBottomOf="@+id/mail"
        android:id="@+id/pass"
        android:gravity="center"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorFourth"
        android:textColorHint="@color/colorTertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="@dimen/_15sdp"/>
    <EditText
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:id="@+id/name"
        android:gravity="center"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorFourth"
        android:textColorHint="@color/colorTertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="@dimen/_15sdp"/>
    <EditText
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:id="@+id/phone"
        android:gravity="center"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/colorFourth"
        android:textColorHint="@color/colorTertiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="@dimen/_15sdp" />
    <Button
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:text="@string/signup"
        android:onClick="submitSignUp"
        android:textColor="@color/colorFourth"
        android:backgroundTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>