<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:background="@color/colorSecondary"
    tools:context=".PhoneNumberVerificationActivity">


    <EditText
        android:id="@+id/code"
        android:gravity="left"
        android:paddingStart="@dimen/_5sdp"
        android:hint="@string/code"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColorHint="@color/colorTertiary"
        android:textColor="@color/colorFourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="@dimen/_15sdp" />

    <EditText
        android:id="@+id/counter"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/code"
        app:layout_constraintRight_toRightOf="@+id/code"
        android:text="00:59"
        android:textColorHint="@color/colorTertiary"
        android:textColor="@color/colorFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    <Button
        android:id="@+id/confirmBtn"
        android:padding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resendBtn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/confirm"
        android:onClick="confirmPhoneNumberBtn"
        android:textColor="@color/colorFourth"
        android:backgroundTint="@color/colorPrimary"/>
    <Button
        android:id="@+id/resendBtn"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/resend_code"
        android:onClick="resendCode"
        android:textColor="@color/colorFourth"
        android:backgroundTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>