<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.tomtom.online.sdk.map.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/_20sdp"
        android:background="@drawable/top_radius_corners_card"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="User"
            android:textColor="@color/colorFourth"
            android:textSize="@dimen/_27sdp"/>
    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/clientName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/address"
        android:textSize="@dimen/_9sdp"/>
    <TextView
        android:id="@+id/locationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addressText"
        app:layout_constraintLeft_toLeftOf="@+id/addressText"
        android:text="Location Address"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:textColor="@color/colorFourth"/>

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/clientName"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            android:text="@string/phone"
            android:textSize="@dimen/_9sdp"/>
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addressText"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:text="01000000000"
            android:textColor="@color/colorFourth"/>


        <TextView
            android:id="@+id/barCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/locationAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/bar_code"
            android:textSize="@dimen/_9sdp"/>
        <TextView
            android:id="@+id/barCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/barCodeText"
            app:layout_constraintLeft_toLeftOf="@+id/addressText"
            android:text="CMT81975"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:textColor="@color/colorFourth"/>

        <TextView
            android:id="@+id/estText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            android:text="@string/est"
            android:textSize="@dimen/_9sdp"/>
        <TextView
            android:id="@+id/estTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/estText"
            app:layout_constraintLeft_toLeftOf="@+id/phone"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:text="07:30 pm"
            android:textColor="@color/colorFourth"/>

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="#D7D7D7"
            app:layout_constraintTop_toBottomOf="@+id/barCode"/>

        <TextView
            android:id="@+id/subtotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            android:text="@string/subtotal"
            android:textSize="@dimen/_27sdp"
            android:textColor="@color/colorFourth"/>
        <TextView
            android:id="@+id/subtotalMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/subtotalText"
            android:text="48.0"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/colorFourth"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/subtotalMoney"
            app:layout_constraintTop_toTopOf="@+id/subtotalMoney"
            android:text="$"
            android:textColor="@color/colorFourth"/>


        <Button
            android:id="@+id/confirmBtn"
            app:layout_constraintTop_toBottomOf="@id/subtotalText"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/confirm"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/curved_rectangle_bg"
            android:backgroundTint="@color/colorSecondary"
            android:textSize="@dimen/_15sdp"
            android:onClick="confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>